Fix problem where long text descriptions would overflow the card. Now they are automatically collapsed and can be expanded.

--- a/src/web/Fig.Web/wwwroot/css/app.css
+++ b/src/web/Fig.Web/wwwroot/css/app.css
@@ -3,6 +3,7 @@
 :root {
     --bs-body-color: #b4babe;
     --rz-card-padding: 0.8rem !important;
+    --description-fade-color: rgba(26, 26, 26, 0.95);
 }
 
 html, body {
